[tool.poetry]
name = "subway"
version = "0.1.0"
description = ""
authors = ["tangxianyun <xianyun.tang@ailabs.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "FIX002", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]
"alembic/versions/*.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]
strict = true
exclude = ['^tests/.+', '^alembic/.+']


[tool.coverage.report]
omit = ["tests/*", "**/*/__init__.py"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]