[tool.poetry]
name = "pysubway"
version = "0.1.0"
description = ""
authors = ["tangxianyun <xianyun.tang@ailabs.tw>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
poethepoet = "^0.27.0"
pydantic = "^2.8.2"
aiohttp = "^3.10.2"
nanoid = "^2.0.0"
uvloop = "^0.19.0"
anyio = "^4.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "FIX002", "COM812", "ISC001", "S610"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disable_error_code = ["import-untyped"]
strict = true
exclude = ['^tests/.+']


[tool.coverage.report]
omit = ["tests/*", "**/*/__init__.py"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]


[tool.poe.tasks.client]
cmd = "python -m src.main client --host=$host --port=$port --subdomain=$subdomain $local_port "
args = [
    { name = "local_port", positional = true, required = true, help = "The local port to bind to." },
    { name = "host", default = "pysubway.com", help = "The host of the control server." },
    { name = "port", default = "5678", help = "The port of the control server." },
    { name = "subdomain", help = "(Optinoal) The specified subdomain."}
]


[tool.poe.tasks.server]
cmd = "python -m src.main server --control_port=$control_port --domain=$domain --use_ssl=$use_ssl --behind_proxy=$behind_proxy "
args = [
    { name = "control_port", default = "5678", help = "The control port for the server." },
    { name = "domain", default = "pysubway.com", help = "Custom domain to use when self-hosted." },
    { name = "use_ssl", default = "false", help = "Set this to true if your server is using HTTPS." },
    { name = "behind_proxy", default = "false", help = "Set this to true if your server is behind a proxy." }

]
